--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@dmail/project-eslint-config": "github:dmail/project-eslint-config",
     "@dmail/prettiest": "1.0.0",
     "eslint": "5.1.0",
+    "babel-eslint": "9.0.0",
     "eslint-plugin-import": "2.6.0",
     "prettier": "1.9.1",
     "rimraf": "2.6.2",
